crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__intent_send_at.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
40 00 00 00 06 10 00 00 00 00 00 00 00 00 00 00
00 00 00 00 01 e7 10 00 00 00 00 00 00 00 00 00
00 00 00 00 00 74 17 00 16 52 75 6e 20 74 68 65
20 6e 69 67 68 74 6c 79 20 63 68 65 63 6b 73 02
c0 ee 6d 00
