crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__intent_send_attachments.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
6b 00 00 00 06 10 00 00 00 00 00 00 00 00 00 00
00 00 00 00 01 e7 10 00 00 00 00 00 00 00 00 00
00 00 00 00 00 74 17 00 13 77 68 61 74 20 69 73
20 77 72 6f 6e 67 20 68 65 72 65 3f 00 02 21 2f
55 73 65 72 73 2f 6d 65 2f 2e 73 6c 6f 70 74 79
2f 64 72 6f 70 2f 78 2f 73 68 6f 74 2e 70 6e 67
0e 2f 77 6f 72 6b 2f 6e 6f 74 65 73 2e 6d 64
