crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__intent_send_draft.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
42 00 00 00 06 10 00 00 00 00 00 00 00 00 00 00
00 00 00 00 01 e7 10 00 00 00 00 00 00 00 00 00
00 00 00 00 00 74 17 00 1b 47 6f 20 6f 6e 20 66
72 6f 6d 20 77 68 65 72 65 20 69 74 20 73 74 6f
70 70 65 64 04 00
