crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__intent_send_interrupt.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
45 00 00 00 06 10 00 00 00 00 00 00 00 00 00 00
00 00 00 00 01 e7 10 00 00 00 00 00 00 00 00 00
00 00 00 00 00 74 17 00 1e 53 74 6f 70 2c 20 61
6e 64 20 66 69 78 20 74 68 65 20 70 61 72 73 65
72 20 66 69 72 73 74 05 00
