crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__intent_send_queue.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
33 00 00 00 06 10 00 00 00 00 00 00 00 00 00 00
00 00 00 00 01 e7 10 00 00 00 00 00 00 00 00 00
00 00 00 00 00 74 17 00 0d 74 68 65 6e 20 74 68
65 20 64 6f 63 73 01
