crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__intent_send_steer.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
38 00 00 00 06 10 00 00 00 00 00 00 00 00 00 00
00 00 00 00 01 e7 10 00 00 00 00 00 00 00 00 00
00 00 00 00 00 74 17 00 12 75 73 65 20 74 68 65
20 6f 74 68 65 72 20 74 65 73 74 00
