crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__intent_set_effort.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
29 00 00 00 06 10 00 00 00 00 00 00 00 00 00 00
00 00 00 00 01 e7 10 00 00 00 00 00 00 00 00 00
00 00 00 00 00 74 17 0d 04 68 69 67 68
