crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__intent_set_mode.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
29 00 00 00 06 10 00 00 00 00 00 00 00 00 00 00
00 00 00 00 01 e7 10 00 00 00 00 00 00 00 00 00
00 00 00 00 00 74 17 09 04 70 6c 61 6e
