crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__intent_set_model.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
34 00 00 00 06 10 00 00 00 00 00 00 00 00 00 00
00 00 00 00 01 e7 10 00 00 00 00 00 00 00 00 00
00 00 00 00 00 74 17 07 0f 63 6c 61 75 64 65 2d
6f 70 75 73 2d 35 2d 35
